# PyScopeGrab

./: .gitignore  PyScopeGrap.py  README.md  ToDo.md  app_settings.py  byte_reader.py  patch  scpi.md  scpi_client_pyvisa.py
doc/: ARCHITECTURE.md
infos/: links.txt
logs/: data.txt
pyscopegrab/: PyScopeGrap.py  __init__.py  prefs_dialog.py  pyproject.toml  scope_grabber.py  scope_gui_pyqt6.py  scpi_server.py
pyscopegrap/: PyScopeGrap.py  __init__.py  __main__.py  app_settings.py  byte_reader.py  prefs_dialog.py  pyproject.toml  scope_grabber.py  scope_gui_pyqt6.py  scpi_server.py
pyscopegrap/ui/: prefs_dialog.ui
